feat:backend setup

--- a/repo/apps/backend/package.json
+++ b/repo/apps/backend/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js" 
   },
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
+  "description": "A simple Express backend project",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "4.19.2" 
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7" 
   }
 }
