--- a/repo/apps/native/tsconfig.json
+++ b/repo/apps/native/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@repo/typescript-config/react-native-library.json",
   "compilerOptions": {
     "strict": true
   }
