--- a/repo/apps/backend/package.json
+++ b/repo/apps/backend/package.json
@@ -4,16 +4,20 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js" 
+    "dev": "nodemon src/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Your Name",
   "license": "ISC",
   "description": "A simple Express backend project",
   "dependencies": {
-    "express": "4.19.2" 
+    "express": "4.19.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7" 
+    "@types/node": "^20.14.2",
+    "nodemon": "^3.1.3",
+    "typescript": "^5.4.5",
+    "eslint": "^8.56.0"
   }
 }
