--- a/repo/apps/native/package.json
+++ b/repo/apps/native/package.json
@@ -8,22 +8,27 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "build-android": "eas build --platform android",
+    "build-ios": "eas build --platform ios",
+    "submit-android": "eas submit -p android",
+    "submit-ios": "eas submit -p ios"
   },
   "dependencies": {
+    "@repo/ui": "*",
     "expo": "^49.0.21",
-    "expo-status-bar": "~1.7.0",
+    "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.73.1",
-    "react-native-web": "^0.19.10",
-    "@repo/ui": "*"
+    "react-native": "0.72.10",
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@expo/webpack-config": "^19.0.0",
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
+    "eslint-plugin-react-native": "^4.1.0",
     "typescript": "^5.3.3"
   }
 }
