--- a/repo/package.json
+++ b/repo/package.json
@@ -11,11 +11,18 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
   },
   "devDependencies": {
+    "add": "^2.0.6",
+    "eslint": "^9.4.0",
     "prettier": "^3.1.1",
-    "turbo": "latest"
+    "remove": "^0.1.5",
+    "turbo": "latest",
+    "workspace": "^0.0.1-preview.1"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "backend": "^0.0.0"
   }
 }
