--- a/repo/apps/native/tsconfig.json
+++ b/repo/apps/native/tsconfig.json
@@ -1,6 +1,8 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@repo/typescript-config/react-native-library.json",
   "compilerOptions": {
     "strict": true
-  }
+  },
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", ".expo-shared", ".turbo", "assets", ".gitignore"]
 }
