--- a/repo/apps/web/package.json
+++ b/repo/apps/web/package.json
@@ -2,18 +2,20 @@
   "name": "web",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint-fix": "eslint . --fix"
   },
   "dependencies": {
+    "@repo/ui": "*",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10",
-    "@repo/ui": "*"
+    "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
@@ -21,8 +23,9 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "babel-plugin-react-native-web": "^0.19.10",
-    "eslint": "^8.56.0",
+    "eslint": "^9.4.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-react": "^7.34.2",
     "typescript": "^5.3.3"
   }
 }
