--- a/repo/package.json
+++ b/repo/package.json
@@ -8,10 +8,11 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
+    "lint": "turbo lint",
+    "lint-fix": "turbo lint-fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
   },
   "devDependencies": {
-    "prettier": "^3.1.1",
     "turbo": "latest"
   },
   "packageManager": "yarn@1.22.19",
