--- a/repo/package.json
+++ b/repo/package.json
@@ -10,7 +10,8 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "lint": "turbo lint",
     "lint-fix": "turbo lint-fix",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "turbo": "latest"
@@ -18,5 +19,6 @@
   "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=18"
-  }
+  },
+  "dependencies": {}
 }
