feat kitty_01: Linting checks

--- a/repo/.github/workflows/lint.yml
+++ b/repo/.github/workflows/lint.yml
@@ -3,10 +3,11 @@ name: Linting
 on:
   pull_request:
     branches:
-      - main
+      - '**'
 
 jobs:
-  lint:
+  Continuous-Integration:
+    name: Lint checks before merging pr
     runs-on: ubuntu-latest
 
     steps:
