--- a/repo/apps/native/package.json
+++ b/repo/apps/native/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "expo start --web",
     "android": "expo start --android",
