--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
   },
   "devDependencies": {
-    "turbo": "latest"
+    "turbo": "^2.0.6"
   },
   "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=18"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "name": "my-kitty"
 }
