--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@repo/typescript-config/backend.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "moduleResolution": "Node"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", ".next", ".turbo", "dist"]
