--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "expo start --web",
+    "native-dev": "expo start --web",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -16,17 +16,16 @@
   "dependencies": {
     "@repo/ui": "*",
     "expo": "^49.0.21",
-    "expo-status-bar": "~1.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.73.1",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.10",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@expo/webpack-config": "^19.0.0",
-    "@types/react": "^18.2.46",
-    "@types/react-native": "^0.73.0",
+    "@types/react": "~18.2.14",
     "eslint": "^9.4.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-native": "^4.1.0",
