--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "dev": "turbo run dev",
+    "native-dev": "cd apps/native && yarn run native-dev",
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
     "lint": "turbo lint",
