--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,12 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "src/index.js",
-  "type": "module",
   "scripts": {
-    "migrate":"npx prisma migrate dev",
+    "migrate": "npx prisma migrate dev",
     "start": "npx prisma generate && nodemon",
-    "dev": "npx prisma generate && nodemon",
-    "build": "tsc",
+    "dev": "npx prisma generate && tsc -b && node dist/index.js",
+    "build": "tsc -b",
     "lint": "eslint",
     "lint-fix": "eslint . --fix"
   },
@@ -31,7 +30,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@repo/typescript-config": "*",
     "eslint": "^9.4.0",
-    "nodemon": "^2.0.7"
+    "typescript": "^5.5.3"
   }
 }
