Zod moved to common packages

--- a/turbo.json
+++ b/turbo.json
@@ -1,24 +1,19 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env.*local"
-  ],
+  "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
-      "outputs": [
-        "dist/**",
-        ".next/**",
-        "!.next/cache/**"
-      ],
-      "dependsOn": [
-        "^build"
-      ]
+      "outputs": ["dist/**", ".next/**", "!.next/cache/**"],
+      "dependsOn": ["^build"]
     },
     "dev": {
       "cache": false,
       "persistent": true
     },
-    "migrate":{
+    "backend#dev": {
+      "dependsOn": ["@my-kitty/zod#build"]
+    },
+    "migrate": {
       "cache": false
     },
     "lint": {},
