--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "scripts": {
     "migrate": "npx prisma migrate dev",
-    "start": "npx prisma generate && nodemon",
+    "start": "npx prisma generate && npx nodemon src/index.ts",
     "dev": "npx nodemon src/index.ts",
     "build": "tsc -b",
     "lint": "eslint",
@@ -26,10 +26,10 @@
     "otplib": "^12.0.1",
     "prisma": "^5.16.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "zod": "^3.23.8"
+    "typescript": "^5.5.3"
   },
   "devDependencies": {
+    "@my-kitty/zod": "*",
     "@repo/typescript-config": "*",
     "eslint": "^9.4.0",
     "nodemon": "^3.1.4",
