--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,15 +6,8 @@
         "name": "next"
       }
     ],
-    "module": "esnext"
+    "module": "NodeNext"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
