--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@my-kitty/database",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
+    "dev": "tsc --watch",
+    "build": "tsc -b",
     "migrate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +22,9 @@
     "@repo/typescript-config": "*"
   },
   "exports": {
-    "./client": "./src/index.ts"
+    "./index": {
+      "types" : "./src/index.ts",
+      "default" :"./dist/index.js"
+  }
   }
 }
