--- a/packages/zod/package.json
+++ b/packages/zod/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@my-kitty/zod",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc --watch",
