--- a/packages/zod/package.json
+++ b/packages/zod/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
     "zod": "^3.23.8"
   },
   "exports": {
