--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@my-kitty/database": "*",
     "@my-kitty/zod": "*",
-    "@repo/typescript-config": "*",
+    "@my-kitty/typescript-config": "*",
     "@types/ws": "^8.5.12",
     "ws": "^8.18.0"
   },
