--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -14,7 +14,7 @@
     "lint-fix": "eslint . --fix"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@my-kitty/ui": "*",
     "expo": "^49.0.21",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
