--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@my-kitty/ui",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
-    "@repo/typescript-config": "*",
+    "@my-kitty/typescript-config": "*",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
