--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,8 +1,9 @@
 {
-  "extends": "@repo/typescript-config/react-native-library",
+  "extends": "@my-kitty/typescript-config/react-native-library",
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
+    "jsx": "react",
     "strict": true
   }
 }
