feat: added intial config for tailwind

--- a/apps/native/tsconfig.json
+++ b/apps/native/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@my-kitty/typescript-config/react-native-library.json",
   "compilerOptions": {
+    "types": ["nativewind/types"],
     "strict": true
   },
   "include": ["**/*.ts", "**/*.tsx"],
