--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,14 +18,18 @@
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
+    "@my-kitty/tailwind-config": "*",
     "@my-kitty/typescript-config": "*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.19",
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^9.4.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-react": "^7.34.2",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.3.3"
   }
 }
