--- a/apps/chat/package.json
+++ b/apps/chat/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "./src/index.js",
   "scripts": {
+    "start": "npx nodemon src/index.ts",
+    "dev": "npx nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
